--- a/src/abb_robot_arm/abb_irb1200_support/config/joint_names_irb1200_5_90.yaml
+++ b/src/abb_robot_arm/abb_irb1200_support/config/joint_names_irb1200_5_90.yaml
@@ -1,1 +1,11 @@
-controller_joint_names: ['joint_1', 'joint_2', 'joint_3', 'joint_4', 'joint_5', 'joint_6']
+controller_joint_names:
+  [
+    "joint_1",
+    "joint_2",
+    "joint_3",
+    "joint_4",
+    "joint_5",
+    "joint_6",
+    "joint_l_finger",
+    "joint_r_finger",
+  ]
