--- a/src/abb_robot_arm/abb_irb1200_moveit_config/config/joint_limits.yaml
+++ b/src/abb_robot_arm/abb_irb1200_moveit_config/config/joint_limits.yaml
@@ -32,3 +32,13 @@ joint_limits:
     max_velocity: 10.472
     has_acceleration_limits: false
     max_acceleration: 0
+  joint_l_finger:
+    has_velocity_limits: true
+    max_velocity: 0.2
+    has_acceleration_limits: false
+    max_acceleration: 0
+  joint_r_finger:
+    has_velocity_limits: true
+    max_velocity: 0.2
+    has_acceleration_limits: false
+    max_acceleration: 0
