--- a/src/abb_robot_arm/abb_irb1200_moveit_config/config/fake_controllers.yaml
+++ b/src/abb_robot_arm/abb_irb1200_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,6 @@
 controller_list:
-  - name: fake_manipulator_controller
+  - name: fake_robotic_arm_controller
+    type: $(arg fake_execution_type)
     joints:
       - joint_1
       - joint_2
@@ -7,3 +8,12 @@ controller_list:
       - joint_4
       - joint_5
       - joint_6
+  - name: fake_gripper_controller
+    type: $(arg fake_execution_type)
+    joints:
+      - joint_l_finger
+initial:  # Define initial robot poses per group
+  - group: robotic_arm
+    pose: up
+  - group: gripper
+    pose: closed
